# notions

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  LICENSE.md  Makefile  README.md  justfile  noxfile.py  pyproject.toml
.github/workflows/: build-python.yaml
examples/: api.sh  api_get.sh  basic.py  create_database.py  create_page.py  database.sh  page.sh  search.sh
notions/: __main__.py  client.py  flatten.py  requests.py  responses.py
notions/cli/: api.py  config.py  database.py  main.py  page.py  run.py  search.py  yaml.py
notions/models/: block.py  color.py  cover.py  database.py  date.py  emoji.py  file.py  number.py  page.py  parent.py  query_database.py  request.py  response.py  rich_text.py  search.py  update.py  user.py
notions/models/properties/: __init__.py  checkbox.py  created_by.py  created_time.py  date.py  email.py  file.py  files.py  formula.py  last_edited_by.py  last_edited_time.py  multi_select.py  number.py  people.py  phone_number.py  relation.py  rich_text.py  rollup.py  select.py  title.py  url.py
tests/: conftest.py  test_block.py  test_examples.py  test_flatten.py  test_notions.py  test_parse.py  test_parse_database.py  test_parse_page.py
