[tool.poetry]
name = "notions"
version = "0.1.0"
description = "Client library for Notion API"
readme = "README.md"
authors = ["Michael Twomey <mick@twomeylee.name>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
httpx = "^0.18.2"
pydantic = "^1.8.2"
typer = "^0.3.2"
furl = "^2.1.2"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.2"
mypy = "^0.910"
ipython = "^7.25.0"
black = "^21.7b0"
docutils = "^0.17.1"
nox = "^2021.6.12"

[tool.poetry.scripts]
notions = 'notions.__main__:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
