[tool.poetry]
name = "notions"
version = "0.2.0-alpha.0"
description = "Client library for Notion API"
readme = "README.md"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"
homepage = "https://github.com/micktwomey/notions"
repository = "https://github.com/micktwomey/notions"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
httpx = "^0.18.2"
pydantic = "^1.8.2"
typer = "^0.3.2"
furl = "^2.1.2"
coloredlogs = "^15.0.1"
PyYAML = "^5.4.1"
types-PyYAML = "^5.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.2"
mypy = "^0.910"
ipython = "^7.25.0"
black = "^21.7b0"
docutils = "^0.17.1"
nox = "^2021.6.12"
pytest-cov = "^2.12.1"

[tool.poetry.scripts]
notions = 'notions.cli.main:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"

# From https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
warn_redundant_casts = true
warn_unused_ignores = true
#disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
